--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,10 +24,10 @@ jobs:
       run: pixi install
     
     - name: Run tests
-      run: PYTHONPATH=src pixi run pytest test/tests -v
+      run: PYTHONPATH=src pixi run pytest test/tests/ -v
     
     - name: Generate coverage report
-      run: PYTHONPATH=src pixi run pytest test/tests --cov=src/microbiome_ml --cov-report=xml --cov-report=term
+      run: PYTHONPATH=src pixi run pytest test/tests/ --cov=src/microbiome_ml --cov-report=xml --cov-report=term
       continue-on-error: true
     
     - name: Upload coverage to Codecov
