--- a/pixi.toml
+++ b/pixi.toml
@@ -1,10 +1,10 @@
-[project]
+[workspace]
 name = "microbiome_ml"
 version = "0.1.0"
 description = "Python module for standardizing ML applications in microbiome research"
 authors = ["Your Research Group <email@institution.edu>"]
 channels = ["conda-forge", "pytorch", "nvidia", "bioconda"]
-platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]
+platforms = ["linux-64"]
 
 [dependencies]
 python = ">=3.9,<3.12"
@@ -13,6 +13,7 @@ numpy = ">=1.21.0"
 polars = ">=0.20.0"
 requests = ">=2.25.0"
 tqdm = ">=4.64.0"
+pyyaml = ">=0.2.5"
 
 [feature.dev.dependencies]
 pytest = ">=7.0.0"
@@ -35,31 +36,31 @@ mkdocstrings = { version = ">=0.22.0" }
 # transformers = ">=4.20.0"
 # datasets = ">=2.0.0"
 
-[feature.geo.dependencies]
-# Optional geospatial dependencies for annotation modules
-netcdf4 = ">=1.6.0"
-rasterio = ">=1.3.0"
-cdsapi = ">=0.6.0"
-geopandas = ">=0.13.0"
-pandas = ">=1.5.0"
+# [feature.geo.dependencies]
+# # Optional geospatial dependencies for annotation modules
+# netcdf4 = ">=1.6.0"
+# rasterio = ">=1.3.0"
+# cdsapi = ">=0.6.0"
+# geopandas = ">=0.13.0"
+# pandas = ">=1.5.0"
 
-[feature.bio.dependencies]
-# Currently unused - placeholder for future bio dependencies
-# biopython = ">=1.80"
+# [feature.bio.dependencies]
+# # Currently unused - placeholder for future bio dependencies
+# # biopython = ">=1.80"
 
 [tasks]
-test = "pytest tests/ -v --cov=src/microbiome_ml"
-lint = "flake8 src/ tests/"
-format = "black src/ tests/ && isort src/ tests/"
+lint = "flake8 src/ test/tests/"
+format = "black src/ test/tests/ && isort src/ test/tests/"
 type-check = "mypy src/"
 docs-serve = "mkdocs serve"
 docs-build = "mkdocs build"
 pre-commit-install = "pre-commit install"
 clean = "find . -type d -name __pycache__ -delete && find . -name '*.pyc' -delete"
+install-dev = "pip install -e ."
+test = { depends-on = ["install-dev"], cmd = "pytest test/tests/" }
+
 
 [environments]
 default = ["dev"]
-bio = ["dev", "bio"]
-geo = ["dev", "geo"]
 docs = ["dev", "docs"]
-full = ["dev", "bio", "geo", "docs"]
+full = ["dev", "docs"]
