added species-wise ml support + aggregation mthods for converting species-wise to sample-wise data

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,5 +47,6 @@ repos:
     rev: v1.5.1
     hooks:
       - id: mypy
+        files: ^src/
         additional_dependencies: [types-requests]
         # Reads config from pyproject.toml
