--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
 ignore_missing_imports = true
+files = ["src/"]
 
 [[tool.mypy.overrides]]
 module = [
