--- a/pixi.toml
+++ b/pixi.toml
@@ -19,6 +19,11 @@ pyyaml = ">=0.2.5"
 scikit-learn = ">=1.0.0"
 xgboost = ">=1.7.0"
 
+# visualization - used in visualization
+matplotlib = ">=3.5.3"
+seaborn = ">=0.12.2"
+cmasher = ">=1.9.2"
+
 [feature.dev.dependencies]
 pytest = ">=7.0.0"
 pytest-cov = ">=4.0.0"
